--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "youtube-tutorials",
+  "name": "htmx-with-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "htmx": "^0.0.2"
   }
 }
